Fixed category tile not aligned in chrome and bug with monitoring categories in backend.

--- a/static/scss/graphTiler.scss
+++ b/static/scss/graphTiler.scss
@@ -255,6 +255,19 @@ html {
     }
 }
 
+.cat-tile {
+    border: 2px solid $background-mid;
+    border-radius: 3px;
+    padding: 4px;
+    margin: 5px;
+}
+
+.cat-tile-label {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+}
+
 .cat-tile-container {
     display: flex;
     justify-content: center;
@@ -281,7 +294,8 @@ html {
     }
     &.right {
         position: absolute;
-        right: -1% !important;
+        right: -10%;
+        top: -70%;
     }
 }
 
